--- a/css/sustainability.css
+++ b/css/sustainability.css
@@ -67,7 +67,7 @@ header.masthead {
     margin-bottom: 4rem;
   }
   
-  /*timeline*/
+  /*timeline style*/
   .timeline {
     position: relative;
     padding: 0;
