--- a/css/main.css
+++ b/css/main.css
@@ -2,4 +2,5 @@
 @import 'styles.css';
 @import 'common.css';
 @import 'sustainability.css';
-@import 'lending.css';
+@import 'landing.css';
+@import 'favourites.css';
