--- a/css/landing.css
+++ b/css/landing.css
@@ -1,66 +1,69 @@
 /*START masthead*/
 header.mastheadlanding {
-    padding-top: 15rem;
-    padding-bottom: 10rem;
-    text-align: center;
-    color: #fff;
-    background-image: url("../assets/img/landing_page_pics/girl-691712_1920.jpg");
-    background-repeat: no-repeat;
-    background-attachment: scroll;
-    background-position: center center;
-    background-size: cover;
+  width: 100%;
+  height: 800px;
+  padding-top: 15rem;
+  padding-bottom: 10rem;
+  text-align: center;
+  color: #fff;
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../assets/img/landing_page_pics/girl-691712_1920.jpg");
+  background-repeat: no-repeat;
+  background-attachment: scroll;
+  background-position: center center;
+  background-size: cover;
+}
+
+header.mastheadlanding .masthead-heading {
+  font-size: 3rem;
+  font-weight: 700;
+  line-height: 3.25rem;
+  margin-bottom: 2rem;
+  font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+}
+
+@media (min-width: 768px) {
+  header.masthead {
+    padding-top: 17rem;
+    padding-bottom: 12.5rem;
   }
-  
-  header.mastheadlanding .masthead-heading {
-    font-size: 3rem;
-    font-weight: 700;
-    line-height: 3.25rem;
+
+  header.masthead .masthead-subheading {
+    font-size: 2.25rem;
+    font-style: italic;
+    line-height: 2.25rem;
     margin-bottom: 2rem;
-    font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   }
-  
-  @media (min-width: 768px) {
-    header.masthead {
-      padding-top: 17rem;
-      padding-bottom: 12.5rem;
-    }
-  
-    header.masthead .masthead-subheading {
-      font-size: 2.25rem;
-      font-style: italic;
-      line-height: 2.25rem;
-      margin-bottom: 2rem;
-    }
-  
-    header.masthead .masthead-heading {
-      font-size: 4.5rem;
-      font-weight: 700;
-      line-height: 4.5rem;
-      margin-bottom: 4rem;
-    }
-  }
-  
-   /* OH Yeah section */
 
-  .featurette-divider {
-    margin: 5rem 0; 
+  header.masthead .masthead-heading {
+    font-size: 4.5rem;
+    font-weight: 700;
+    line-height: 4.5rem;
     margin-bottom: 4rem;
-    background-image: url("../assets/img/lending_page_pics/young-690958_1280.jpg");
   }
-  
-  .featurette-heading {
-    font-weight: 300;
-    line-height: 1;
-    letter-spacing: -.05rem;
-  }
-  
+}
 
-  /*Reviews */
-  /* Carousel base class */
+/* OH Yeah section */
+
+.featurette-divider {
+  margin: 5rem 0;
+  margin-bottom: 4rem;
+  background-image: url("../assets/img/lending_page_pics/young-690958_1280.jpg");
+}
+
+.featurette-heading {
+  font-weight: 300;
+  line-height: 1;
+
+}
+
+
+/*Reviews */
+/* Carousel base class */
 .carousel {
   margin-bottom: 4rem;
   margin-top: 4rem;
 }
+
 /* Since positioning the image, we need to help out the caption */
 .carousel-caption {
   bottom: 3rem;
@@ -70,11 +73,12 @@ header.mastheadlanding {
 
 /* Declare heights because of positioning of img element */
 .carousel-item {
-  height: 38rem;
+  height: 30rem;
 
 }
-.carousel-item > img {
-  position: absolute; 
+
+.carousel-item>img {
+  position: absolute;
   top: 0;
   left: 0;
   min-width: 100%;
@@ -86,6 +90,7 @@ header.mastheadlanding {
 -------------------------------------------------- */
 
 @media (min-width: 40em) {
+
   /* Bump up size of carousel content */
   .carousel-caption p {
     margin-bottom: 1.25rem;
@@ -108,129 +113,161 @@ header.mastheadlanding {
 
 /*FOOTER*/
 
-@import url(https://fonts.googleapis.com/css?family=Rubik:300,400,500,700);
+@import url('https://fonts.googleapis.com/css?family=Montserrat:400,700');
 
 body {
- font-family:Rubik,sans-serif;
- position:relative;
- font-weight:400;
- font-size:15px
+  font-family: Montserrat, sans-serif;
+  position: relative;
+  font-weight: 400;
+  font-size: 15px
 }
+
 ul {
- padding:0;
- margin:0
+  padding: 0;
+  margin: 0
 }
+
 li {
- list-style:none
+  list-style: none
 }
-a:focus,a:hover {
- text-decoration:none;
- -webkit-transition:.3s ease;
- -o-transition:.3s ease;
- transition:.3s ease
+
+a:focus,
+a:hover {
+  text-decoration: none;
+  -webkit-transition: .3s ease;
+  -o-transition: .3s ease;
+  transition: .3s ease
 }
+
 a:focus {
- outline:0
+  outline: 0
 }
+
 img {
- max-width:100%
+  max-width: 100%
 }
+
 p {
- font-size:16px;
- line-height:30px;
- color:#898b96;
- font-weight:300
+  font-size: 16px;
+  line-height: 30px;
+  color: #898b96;
+  font-weight: 300
 }
+
 h4 {
- font-family:Rubik,sans-serif;
- margin:0;
- font-weight:400;
- padding:0;
- color:#363940
+  font-family: Rubik, sans-serif;
+  margin: 0;
+  font-weight: 400;
+  padding: 0;
+  color: #363940
 }
+
 a {
- color:#5867dd
+  color: #5867dd
 }
+
 .no-padding {
- padding:0!important
+  padding: 0 !important
 }
 
 .footer-big {
- padding:105px 0 65px 0
+  padding: 105px 0 65px 0
 }
+
 .footer-big .footer-widget {
- margin-bottom:40px
+  margin-bottom: 40px
 }
+
 .footer--light {
- background:#e7e8ed
+  background: #e7e8ed
 }
-.footer-big .footer-menu ul li a,.footer-big p,.footer-big ul li {
- color:#898b96
+
+.footer-big .footer-menu ul li a,
+.footer-big p,
+.footer-big ul li {
+  color: #898b96
 }
+
 .footer-menu {
- padding-left:48px
+  padding-left: 48px
 }
+
 .footer-menu ul li a {
- font-size:15px;
- line-height:32px;
- -webkit-transition:.3s;
- -o-transition:.3s;
- transition:.3s
+  font-size: 15px;
+  line-height: 32px;
+  -webkit-transition: .3s;
+  -o-transition: .3s;
+  transition: .3s
 }
+
 .footer-menu ul li a:hover {
- color:#5867dd
+  color: #5867dd
 }
+
 .footer-menu--1 {
- width:100%
+  width: 100%
 }
+
 .footer-widget-title {
- line-height:42px;
- margin-bottom:10px;
- font-size:18px
+  line-height: 42px;
+  margin-bottom: 10px;
+  font-size: 18px
 }
+
 .mini-footer {
- background:#192027;
- text-align:center;
- padding:32px 0
+  background: #192027;
+  text-align: center;
+  padding: 32px 0
 }
+
 .mini-footer p {
- margin:0;
- line-height:26px;
- font-size:15px;
- color:#999
+  margin: 0;
+  line-height: 26px;
+  font-size: 15px;
+  color: #999
 }
+
 .mini-footer p a {
- color:#5867dd
+  color: #5867dd
 }
+
 .mini-footer p a:hover {
- color:#34bfa3
+  color: #34bfa3
 }
+
 .widget-about img {
- display:block;
- margin-bottom:30px
+  display: block;
+  margin-bottom: 30px
 }
+
 .widget-about p {
- font-weight:400
+  font-weight: 400
 }
+
 .widget-about .contact-details {
- margin:30px 0 0 0
+  margin: 30px 0 0 0
 }
+
 .widget-about .contact-details li {
- margin-bottom:10px
+  margin-bottom: 10px
 }
+
 .widget-about .contact-details li:last-child {
- margin-bottom:0
+  margin-bottom: 0
 }
+
 .widget-about .contact-details li span {
- padding-right:12px
+  padding-right: 12px
 }
+
 .widget-about .contact-details li a {
- color:#5867dd
+  color: #5867dd
 }
+
 @media (max-width:991px) {
- .footer-menu {
-  padding-left:0
- }
+  .footer-menu {
+    padding-left: 0
+  }
 }
 
 
